hphp/hack/test/typecheck/reactive/rx_of_scope12.php
<?hh

function f(): void {
}

<<__Rx>>
async function g(): Awaitable<void> {
  // ERROR
  await async {
    f();
  };
}
